--- a/style.css
+++ b/style.css
@@ -1,49 +1,22 @@
-.rowfooter{
-        display: flex;
-        justify-content: space-around
-        background-color: gold;
-        width: 80px;
-        
+.Gur{display: flex;
+    justify-content: space-between;
+    background: white;
+    border: solid;
+    margin: 30px;
+    padding: 10px; 
+    
+      
 }
-
-.rowmid{
-     display: flex;
-     justify-content: space-around;
-}
-.headshot{
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-}
-
-.rowcontact{
-    display: flex;
-    justify-content: center;
-}
-
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-}
-
-/* Add a hover effect if you want */
-.fa:hover {
-    opacity: 0.7;
-}
-
-/* Set a specific color for each brand */
-
-/* Facebook */
-.fa-facebook {
-    background: #3B5998;
+ 
+ img{width: 400px;
+    height: 300px;
+    border-radius: 50%;
+ }
+ 
+ #ir{display: flex;
+    justify-content: space-around;
     color: white;
-}
-
-/* Twitter */
-.fa-twitter {
-    background: #55ACEE;
-    color: white;
+ }
+ 
+body{background-image: url("http://coloringpagesf.com/wp-content/uploads/parser/html-code-for-web-page-background-color-1.jpg");
 }
